--- a/application.yml
+++ b/application.yml
@@ -1,8 +1,8 @@
 server: # REST and WS server
-  port: 8080
+  port: 443
   address: 0.0.0.0
   http2:
-    enabled: false # Whether to enable HTTP/2 support
+    enabled: true # Whether to enable HTTP/2 support
 plugins:
 #  name: # Name of the plugin
 #    some_key: some_value # Some key-value pair for the plugin
