--- a/application.yml
+++ b/application.yml
@@ -16,7 +16,7 @@ lavalink:
 #  defaultPluginRepository: "https://maven.lavalink.dev/releases" # optional, defaults to the Lavalink release repository
 #  defaultPluginSnapshotRepository: "https://maven.lavalink.dev/snapshots" # optional, defaults to the Lavalink snapshot repository
   server:
-    password: "1234"
+    password: "fo2sh21"
     sources:
       youtube: true
       bandcamp: true
